Fix z-index

--- a/index.scss
+++ b/index.scss
@@ -4,6 +4,7 @@
 
 .line-plot.canvas {
     position: absolute;
+    z-index: 1000;
 }
 
 .line-plot.svg {
